<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools= "http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:id="@+id/layouttoolbar"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/status"
            android:layout_weight="1"
            android:text="@string/orderstatus"
            android:fontFamily="serif"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/layouttoolbar"/>


    <Spinner
        android:id="@+id/spinnervendors"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layouttoolbar"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/layouttoolbar"
        android:textAlignment="center"
        android:prompt="@string/spinner_header"
        android:paddingStart="20dp"
        android:spinnerMode="dialog"
        android:fontFamily="serif"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:popupBackground="@color/colorPrimary"
        android:textColor="@color/colorPrimary" />
    <View
        android:id="@+id/Afterspinner"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/spinnervendors"/>
    <View
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:id="@+id/viewOrderPlaced"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@+id/imageOrderplaced"
        app:layout_constraintBottom_toBottomOf="@+id/imageOrderplaced"
        android:background="@drawable/shape_status_completed"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/imageOrderplaced"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:tint="@color/colorPrimary"
        android:src="@drawable/foodready"
        app:layout_constraintTop_toBottomOf="@+id/Afterspinner"
        app:layout_constraintStart_toEndOf="@id/viewOrderPlaced"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/foodready"/>

    <View
        android:id="@+id/viewPlacedSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageOrderplaced"
        app:layout_constraintEnd_toEndOf="@+id/imageOrderplaced"
        app:layout_constraintStart_toStartOf="@id/imageOrderplaced"
        app:layout_constraintTop_toTopOf="@id/imageOrderplaced"/>
    <TextView
        android:id="@+id/textOrderplaced"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/imageOrderplaced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewPlacedSupporter"
        android:text="Food is getting prepared"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textColor="@color/colorTextPrimary"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="We have received your order"
        android:id="@+id/textbelowconfirmed"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textOrderplaced"
        app:layout_constraintEnd_toEndOf="@+id/textOrderplaced"
        app:layout_constraintTop_toBottomOf="@+id/viewPlacedSupporter"/>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textbelowconfirmed"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>